--- a/workspace/lib/math/CMakeLists.txt
+++ b/workspace/lib/math/CMakeLists.txt
@@ -48,21 +48,21 @@ target_link_libraries(math_collision_shapes_AlignedBoxCollisionShape PUBLIC
         math_collision_shapes_CollisionShape)
 
 # Testing configuration
-option(MATH_BUILD_TESTS "Build tests for math library" ON)
+# option(MATH_BUILD_TESTS "Build tests for math library" ON)
 
-if(MATH_BUILD_TESTS)
-    # Enable testing
-    enable_testing()
+# if(MATH_BUILD_TESTS)
+#     # Enable testing
+#     enable_testing()
 
-    # Try to find and configure GoogleTest
-    find_package(GoogleTest)
+#     # Try to find and configure GoogleTest
+#     find_package(GoogleTest)
 
-    # Include tests directory if GoogleTest is available
-    if(GOOGLETEST_CONFIGURED)
-        # Make GMOCK_INCLUDE_DIRS available to tests
-        include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
-        add_subdirectory(tests)
-    else()
-        message(WARNING "Skipping tests for math library as GoogleTest is not available")
-    endif()
-endif()
+#     # Include tests directory if GoogleTest is available
+#     if(GOOGLETEST_CONFIGURED)
+#         # Make GMOCK_INCLUDE_DIRS available to tests
+#         include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
+#         add_subdirectory(tests)
+#     else()
+#         message(WARNING "Skipping tests for math library as GoogleTest is not available")
+#     endif()
+# endif()
