Docker-related changes (#7)
* Update docker-compose.yaml

* Update Dockerfile

* Update docker related files

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ../workspace:/usr/src/mpc-cbf/workspace
+      - ../:/usr/src/mpc-cbf/
