Code optimization: rename to neighbor_state, change .optimize signature, remove init_states in main script

--- a/workspace/lib/math/CMakeLists.txt
+++ b/workspace/lib/math/CMakeLists.txt
@@ -36,7 +36,7 @@ target_link_libraries(math_Controls PUBLIC math_Types model_DoubleIntegrator)
 
 add_library(math_Random SHARED src/Random.cpp)
 target_include_directories(math_Random PUBLIC include)
-target_link_libraries(math_Random PUBLIC math_Types)
+target_link_libraries(math_Random PUBLIC math_Types model_DoubleIntegrator)
 
 add_library(math_collision_shapes_CollisionShape SHARED src/collision_shapes/CollisionShape.cpp)
 target_include_directories(math_collision_shapes_CollisionShape PUBLIC include)
