--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -19,32 +19,32 @@
             10
         ],
         "v_min": [
-            -1,
-            -1,
+            -2,
+            -2,
             -2.6179938779914944
         ],
         "v_max": [
-            1,
-            1,
+            2,
+            2,
             2.6179938779914944
         ],
         "a_min": [
             -2.0,
             -2.0,
-            -3.141592653589793
+            -10.141592653589793
         ],
         "a_max": [
             2.0,
             2.0,
-            3.141592653589793
+            10.141592653589793
         ],
         "pos_std": 0.001,
         "vel_std": 0.01
     },
     "pid_params": {
-        "kp": 1.3,
-        "ki": 0.04,
-        "kd": 0.1
+        "kp": 3,
+        "ki": 0.1,
+        "kd": 0.3
     },
     "robot_params": {
         "collision_shape": {
@@ -58,7 +58,7 @@
     "cbf_params": {
         "d_min": 0.8,
         "d_max": 3.0,
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 100000,
         "slack_decay_rate": 0.1
     },
