--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -48,14 +48,19 @@
     },
     "robot_params": {
         "collision_shape": {
+            "aligned_box": [
+                0.2,
+                0.2,
+                0
+            ],
             "radius": 0.5
         }
     },
     "cbf_params": {
         "d_min": 2.0,
-        "d_max": 8,
-        "slack_mode": true,
-        "slack_cost": 1000000,
+        "d_max": 8.0,
+        "slack_mode": false,
+        "slack_cost": 100000,
         "slack_decay_rate": 0.1
     },
     "bezier_params": {
