Update ci pipeline and dockerfile

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -22,7 +22,8 @@ RUN apt-get update && apt-get install -y \
     doxygen \
     git \
     ninja-build \
-    ffmpeg
+    ffmpeg \
+    clang-format
 
 # Copy the current directory contents into the container
 COPY . .
