--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -59,7 +59,7 @@
     "cbf_params": {
         "d_min": 2.0,
         "d_max": 8.0,
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 100000,
         "slack_decay_rate": 0.1
     },
