--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,12 @@ jobs:
 
     - name: Check and fix code formatting
       run: |
-        # Use clang-format with glob patterns for recursive formatting
-        clang-format -i --style=file workspace/lib/*/include/**/*.{cpp,h,hpp} workspace/lib/*/src/**/*.{cpp,h,hpp} || true
+        # Format C++ files in include and src directories
+        for dir in workspace/lib/*/include workspace/lib/*/src; do
+          if [ -d "$dir" ]; then
+            find "$dir" -name "*.cpp" -o -name "*.h" -o -name "*.hpp" | xargs -r clang-format -i --style=file
+          fi
+        done
 
     - name: Commit formatting changes
       run: |
