--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
           echo "All files are properly formatted"
         fi
 
-  build-and-test:
-    name: Build and Test
+  build-test-and-examples:
+    name: Build, Test, and Run Examples
     runs-on: ubuntu-22.04
     # needs: format
     container:
@@ -77,6 +77,18 @@ jobs:
         cd workspace/lib/cbf/build
         ctest --output-on-failure -j20
 
+    - name: Build and Run CBF Example
+      continue-on-error: true
+      run: |
+        cd workspace/lib/cbf/build
+        # Check if the executable exists after build
+        if [ -f "./cbf_examples_CBFFormationControl_example" ]; then
+          echo "Running CBF Formation Control Example..."
+          timeout 60s ./cbf_examples_CBFFormationControl_example || echo "Example completed or timed out after 60s"
+        else
+          echo "CBF FormationControl example executable not found"
+        fi
+
     - name: Build MPC CBF Package
       run: |
         cd workspace/lib/mpc_cbf
@@ -91,48 +103,14 @@ jobs:
         cd workspace/lib/mpc_cbf/build
         ctest --output-on-failure -j20
 
-  run-examples:
-    name: Run Examples
-    runs-on: ubuntu-22.04
-    needs: build-and-test
-    if: always()  # Run even if build-and-test fails
-    container:
-      image: wangyt163/mpc-cbf:latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        submodules: recursive
-
-    - name: Configure Git
-      run: |
-        git config --global --add safe.directory $GITHUB_WORKSPACE
-
-    - name: Build and Run CBF Example
-      run: |
-        cd workspace/lib/cbf
-        mkdir -p build
-        cd build
-        cmake .. -G Ninja
-        ninja -j20
-        # Build and run formation control example if it exists
-        if ninja -t targets | grep -q "cbf_examples_FormationControl_example"; then
-          ninja cbf_examples_FormationControl_example
-          echo "Running CBF Formation Control Example..."
-          timeout 60s ./cbf_examples_FormationControl_example || echo "Example completed or timed out after 60s"
-        fi
-
     - name: Build and Run MPC CBF Example
+      continue-on-error: true
       run: |
-        cd workspace/lib/mpc_cbf
-        mkdir -p build
-        cd build
-        cmake .. -G Ninja
-        ninja -j20
-        # Build and run formation control example if it exists
-        if ninja -t targets | grep -q "mpc_cbf_examples_MPCCBFFormationControl_example"; then
-          ninja mpc_cbf_examples_MPCCBFFormationControl_example
+        cd workspace/lib/mpc_cbf/build
+        # Check if the executable exists after build
+        if [ -f "./mpc_cbf_examples_MPCCBFFormationControl_example" ]; then
           echo "Running MPC CBF Formation Control Example..."
           timeout 60s ./mpc_cbf_examples_MPCCBFFormationControl_example || echo "Example completed or timed out after 60s"
+        else
+          echo "MPC CBF FormationControl example executable not found"
         fi
