Update ci and fix formatting (#15)
* Update ci to run continue if test fails

* Update ci for fomatting and build

* Update clang format config

* Update code finding logic for formatting

* Auto-fix code formatting with clang-format [skip ci]

* Update CI to correctly run the CBF and MPCCBF examples

---------

Co-authored-by: GitHub Action <action@github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,53 +2,52 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, update-ci ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  # format:
-  #   name: Code Formatting
-  #   runs-on: ubuntu-22.04
-  #   container:
-  #     image: wangyt163/mpc-cbf:latest
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
-  #     with:
-  #       fetch-depth: 0
-  #       submodules: recursive
-  #       token: ${{ secrets.GITHUB_TOKEN }}
+  format:
+    name: Code Formatting
+    runs-on: ubuntu-22.04
+    container:
+      image: wangyt163/mpc-cbf:latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        submodules: recursive
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-  #   - name: Configure Git
-  #     run: |
-  #       git config --global --add safe.directory $GITHUB_WORKSPACE
-  #       git config --local user.email "action@github.com"
-  #       git config --local user.name "GitHub Action"
+    - name: Configure Git
+      run: |
+        git config --global --add safe.directory $GITHUB_WORKSPACE
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
 
-    # - name: Check and fix code formatting
-    #   id: format-check
-    #   run: |
-    #     # Find all C++ source files
-    #     cpp_files=$(find . -name "*.cpp" -o -name "*.h" -o -name "*.hpp" | grep -E "(workspace/|src/|include/)")
-        
-    #     # Apply clang-format to all files
-    #     echo "$cpp_files" | xargs clang-format -i
-        
-    #     # Check if there are any changes
-    #     if ! git diff --quiet; then
-    #       echo "Code formatting changes applied"
-    #       git add .
-    #       git commit -m "Auto-fix code formatting with clang-format [skip ci]"
-    #       git push
-    #       echo "formatted=true" >> $GITHUB_OUTPUT
-    #     else
-    #       echo "All files are properly formatted"
-    #       echo "formatted=false" >> $GITHUB_OUTPUT
-    #     fi
+    - name: Check and fix code formatting
+      run: |
+        # Format C++ files in include and src directories
+        for dir in workspace/lib/*/include workspace/lib/*/src; do
+          if [ -d "$dir" ]; then
+            find "$dir" -name "*.cpp" -o -name "*.h" -o -name "*.hpp" | xargs -r clang-format -i --style=file
+          fi
+        done
 
-  build-and-test:
-    name: Build and Test
+    - name: Commit formatting changes
+      run: |
+        if ! git diff --quiet; then
+          echo "Code formatting changes applied"
+          git add .
+          git commit -m "Auto-fix code formatting with clang-format [skip ci]"
+          git push
+        else
+          echo "All files are properly formatted"
+        fi
+
+  build-test-and-examples:
+    name: Build, Test, and Run Examples
     runs-on: ubuntu-22.04
     # needs: format
     container:
@@ -73,9 +72,22 @@ jobs:
         ninja -j20
 
     - name: Run CBF Tests
+      continue-on-error: true
       run: |
         cd workspace/lib/cbf/build
         ctest --output-on-failure -j20
+
+    - name: Build and Run CBF Example
+      continue-on-error: true
+      run: |
+        cd workspace/lib/cbf/build
+        # Check if the executable exists after build
+        if [ -f "./cbf_examples_CBFFormationControl_example" ]; then
+          echo "Running CBF Formation Control Example..."
+          timeout 60s ./cbf_examples_CBFFormationControl_example || echo "Example completed or timed out after 60s"
+        else
+          echo "CBF FormationControl example executable not found"
+        fi
 
     - name: Build MPC CBF Package
       run: |
@@ -86,43 +98,19 @@ jobs:
         ninja -j20
 
     - name: Run MPC CBF Tests
+      continue-on-error: true
       run: |
         cd workspace/lib/mpc_cbf/build
         ctest --output-on-failure -j20
 
-  run-examples:
-    name: Run Examples
-    runs-on: ubuntu-22.04
-    needs: build-and-test
-    container:
-      image: wangyt163/mpc-cbf:latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        submodules: recursive
-
-    - name: Configure Git
-      run: |
-        git config --global --add safe.directory $GITHUB_WORKSPACE
-
-    - name: Build and Run CBF Example
-      run: |
-        cd workspace/lib/cbf/build
-        # Build and run formation control example if it exists
-        if ninja -t targets | grep -q "cbf_examples_FormationControl_example"; then
-          ninja cbf_examples_FormationControl_example
-          echo "Running CBF Formation Control Example..."
-          timeout 60s ./cbf_examples_FormationControl_example || echo "Example completed or timed out after 60s"
-        fi
-
     - name: Build and Run MPC CBF Example
+      continue-on-error: true
       run: |
         cd workspace/lib/mpc_cbf/build
-        # Build and run formation control example if it exists
-        if ninja -t targets | grep -q "mpc_cbf_examples_MPCCBFFormationControl_example"; then
-          ninja mpc_cbf_examples_MPCCBFFormationControl_example
+        # Check if the executable exists after build
+        if [ -f "./mpc_cbf_examples_MPCCBFFormationControl_example" ]; then
           echo "Running MPC CBF Formation Control Example..."
           timeout 60s ./mpc_cbf_examples_MPCCBFFormationControl_example || echo "Example completed or timed out after 60s"
+        else
+          echo "MPC CBF FormationControl example executable not found"
         fi
